--- a/website/package.json
+++ b/website/package.json
@@ -1,19 +1,7 @@
 {
-	"name": "node-login",
-	"version": "1.1.0",
-	"description": "A template for quickly building login systems on top of Node.js & MongoDb",
-	"author": {
-		"name": "Stephen Braitsch",
-		"email": "stephen@braitsch.io"
-	},
-	"website":{
-		"url": "node-login.braitsch.io"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/braitsch/node-login.git"
-	},
-	"private": true,
+	"name": "mhatan",
+	"version": "1.0.0",
+	"description": "A journal db project",
 	"dependencies": {
 		"express": "2.x.x",
 		"stylus": ">= 0.29.x",
@@ -21,7 +9,8 @@
 		"bcrypt": ">= 0.5.x",
 		"mongodb": ">= 1.1.x",
 		"moment" : ">=1.7.x",
-		"emailjs": ">= 0.3.x"
+		"emailjs": ">= 0.3.x",
+		"pg": ">= 0.8.x"
 	},
 	"engines": {
 		"node": "0.8.x",
